--- a/package.json
+++ b/package.json
@@ -2,25 +2,27 @@
   "name": "siren-steps",
   "version": "0.1.0",
   "private": true,
+  "module": "server/index.ts",
+  "type": "module",
+  "scripts": {
+    "start": "bun run --hot ./server/index.ts",
+    "add-user": "bun run ./adduser.ts",
+    "build": "bun run ./scripts/build.ts"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@elastic/eui": "^93.1.1",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^6.22.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@types/bun": "latest",
+    "typescript": "next"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
