--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "siren-steps",
   "version": "0.1.0",
   "private": true,
+  "license": "SEE LICENSE IN LICENSE",
   "module": "server/index.ts",
   "type": "module",
   "scripts": {
